Additional files for a workspace creation

--- a/final_merging.ipynb
+++ b/final_merging.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "import uproot\n",
-    "import json"
+    "import json\n",
+    "import cabinetry\n",
+    "import hist"
    ]
   },
   {
@@ -29,12 +31,39 @@
     "# LIST_OF_FILES_PER_SAMPLE is a list of 9 files containing histograms per sample\n",
     "LIST_OF_FILES_PER_SAMPLE = extract_samples_from_json(json_file)\n",
     "print(LIST_OF_FILES_PER_SAMPLE)\n",
-    "with uproot.recreate(\"histograms_merged.root\") as f_out:\n",
+    "with uproot.recreate(\"histograms.root\") as f_out:\n",
     "    for h_file in LIST_OF_FILES_PER_SAMPLE:\n",
     "        with uproot.open(h_file) as f_per_sample:\n",
     "            for key in f_per_sample.keys(cycle=False):\n",
     "                value = f_per_sample[key]\n",
     "                f_out[key] = value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import utils.rebinning  # noqa: E402\n",
+    "\n",
+    "cabinetry_config = cabinetry.configuration.load(\"cabinetry_config.yml\")\n",
+    "\n",
+    "# rebinning: lower edge 110 GeV, merge bins 2->1\n",
+    "rebinning_router = utils.rebinning.get_cabinetry_rebinning_router(cabinetry_config, rebinning=slice(110j, None, hist.rebin(2)))\n",
+    "cabinetry.templates.build(cabinetry_config, router=rebinning_router)\n",
+    "cabinetry.templates.postprocess(cabinetry_config)  # optional post-processing (e.g. smoothing)\n",
+    "ws = cabinetry.workspace.build(cabinetry_config)\n",
+    "cabinetry.workspace.save(ws, \"workspace.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pyhf inspect workspace.json | head -n 20\n"
    ]
   }
  ],
