--- a/ttbar_analysis_reana.ipynb
+++ b/ttbar_analysis_reana.ipynb
@@ -391,20 +391,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import uproot\n",
     "import os\n",
+    "import uproot\n",
+    "# Create the necessary directories\n",
+    "output_path = f\"histograms/histograms_{sample_name}__{files}.root\"\n",
+    "os.makedirs(os.path.split(output_path)[0], exist_ok=True)\n",
     "\n",
-    "os.makedirs(os.path.split(f\"histograms/histograms_{sample_name}__{files}.root\")[0], exist_ok=True)\n",
-    "# save all available histograms to disk\n",
-    "with uproot.recreate(f\"histograms/histograms_{sample_name}__{files}.root\") as f:\n",
-    "    for channel, histogram in all_histograms[\"hist_dict\"].items():\n",
-    "        for sample in histogram.axes[1]:\n",
-    "            for variation in histogram[:, sample, :].axes[1]:\n",
-    "                variation_string = \"\" if variation == \"nominal\" else f\"_{variation}\"\n",
-    "                if sum(histogram[:, sample, variation].values()) != 0:\n",
-    "                    # only save histograms containing events\n",
-    "                    # many combinations are not used (e.g. ME var for W+jets)\n",
-    "                    f[f\"{channel}_{sample}{variation_string}\"] = histogram[:, sample, variation]"
+    "# Save all available histograms to disk\n",
+    "utils.file_output.save_histograms(all_histograms['hist_dict'], output_path)\n"
    ]
   }
  ],
