files required for ServiceX data request

--- a/file_merging.ipynb
+++ b/file_merging.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "all_histograms = {}\n",
-    "for fname in glob.glob(f\"histograms/histograms_{sample_name}_*/**/*.root\", recursive=True):\n",
+    "for fname in glob.glob(f\"histograms/histograms_{sample_name}_*.root\", recursive=True):\n",
     "    print(f\"opening file {fname}\")\n",
     "    with uproot.open(fname) as f:\n",
     "        # loop over all histograms in file\n",
