--- a/AGC_ServiceX_query.ipynb
+++ b/AGC_ServiceX_query.ipynb
@@ -320,11 +320,7 @@
     "\n",
     "print(f\"processes in fileset: {list(fileset.keys())}\")\n",
     "print(f\"\\nexample of information in fileset:\\n{{\\n  'files': [{fileset['ttbar__nominal']['files'][0]}, ...],\")\n",
-    "print(f\"  'metadata': {fileset['ttbar__nominal']['metadata']}\\n}}\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "# How can I take the single file from fileset and put it in separate step and then try to run everything and after that merge everything in one plot???     "
+    "print(f\"  'metadata': {fileset['ttbar__nominal']['metadata']}\\n}}\")"
    ]
   },
   {
